# agentic-ai-kit

./: README.md  pyproject.toml
agentic_ai/: __init__.py
agentic_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
agentic_ai/agents/: __init__.py  analyst_agent.py  auto_model_agent.py  base.py  json_agent.py  mle_agent.py  reasoning_agent.py  tool_agent.py
agentic_ai/examples/: 01_talking_agents.py  02_personality_and_memory.py  03_tool_agent_weather.py  04_json_agent.py  05_reasoning_agent.py  06_supervisor.py  07_parallel_agents.py  08_debate.py  09_long_term_memory.py  10_rag_agent.py  11_mcp_demo.py  __init__.py
agentic_ai/mcp/: __init__.py  client.py  server.py
agentic_ai/memory/: __init__.py  long_term.py  shared.py  short_term.py
agentic_ai/patterns/: __init__.py  debate.py  orchestrator.py  parallel.py
agentic_ai/rag/: __init__.py  chunker.py  embedder.py  rag_agent.py  vector_store.py
agentic_ai/tools/: __init__.py  builtins.py  registry.py
